--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -23,7 +23,8 @@
 						bc1q5yejhe5rv0m7j0euxml7klkd2ummw0gc3vx58p</span>
 				</div>
 
-				<a href="https://ko-fi.com/alovoa" class="button is-info"
+				<a href="https://ko-fi.com/alovoa" target="_blank"
+					class="button is-info"
 					style="width: 100%; border-color: #dbdbdb; margin-bottom: 4px;"><i
 					class="fa fa-coins"></i><span th:text="#{kofi}"
 					style="padding-left: 4px;"></span></a>
