--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -24,15 +24,14 @@
 						th:each="notification : ${notifications}" style="width: 100%;"
 						th:onclick="viewProfile([[${notification.userFromDto.idEncoded}]])">
 						<div class="card-image">
-							<figure class="image" >
+							<figure class="image">
 								<img th:src="${notification.userFromDto.profilePicture}"
-									class="profile-pic"
-									style="margin: 0;">
+									class="profile-pic" style="margin: 0;">
 							</figure>
 						</div>
 						<div class="card-content">
 							<div class="notification-div full-width"
-								style="height: 100%; display:flex; line-height: initial; align-items: center;  justify-content: center;">
+								style="height: 100%; display: flex; line-height: initial; align-items: center; justify-content: center;">
 								<div>
 									<span th:text="#{notification.liked-by}"></span><span
 										th:text="${notification.userFromDto.firstName}"></span>
@@ -46,6 +45,8 @@
 		</section>
 	</div>
 
+	<div th:replace="fragments.html::iframe"></div>
+
 	<footer th:replace="fragments.html::navigation"></footer>
 	<footer th:replace="fragments.html::footer"></footer>
 
@@ -53,6 +54,7 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/tools/getText.js"></script>
+	<script src="/js/tools/iframe.js"></script>
 	<script src="/js/search.js"></script>
 </body>
 </html>
