--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 <link rel="stylesheet" href="/css/lib/swiper.min.css" />
+<link rel="stylesheet" href="/css/lib/css-loaders.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
 <link rel="stylesheet" href="/css/search.css" />
 <title th:text="#{search.title}"></title>
@@ -93,6 +94,9 @@
 		</div>
 	</div>
 
+	<div class="loader-parent">
+		<div class="loader"></div>
+	</div>
 	<div th:replace="fragments.html::iframe"></div>
 
 	<footer th:replace="fragments.html::navigation"></footer>
