--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -49,17 +49,15 @@
 						</div>
 					</div>
 					<div id="sort-search-spacing" style="padding-left: 24px;"></div>
-					<div>
-
-						<label class="label" th:text="#{search}"></label>
-						<button class="button colored is-info" onclick="search()"
-							style="width: 40px;">
-							<i class="fa fa-search"></i>
-						</button>
-					</div>
 				</div>
 			</div>
 
+			<div id="search-div">
+				<button class="button colored is-info is-rounded" onclick="search()"
+					id="search-button">
+					<i class="fa fa-search"></i>
+				</button>
+			</div>
 		</div>
 
 		<section class="container" id="main-container"></section>
