Fix open-source tile in index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,8 +57,8 @@
 						</div>
 						<div class="card-content">
 							<div class="content">
-								<h4 th:utext="#{index.private.title}"></h4>
-								<p th:utext="#{index.private.description}"></p>
+								<h4 th:utext="#{index.open-source.title}"></h4>
+								<p th:utext="#{index.open-source.description}"></p>
 								<p>
 									<a href="https://github.com/Alovoa/alovoa"
 										th:utext="#{source-code}"></a>
