--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -222,7 +222,7 @@
 											</button>
 										</div>
 										<div class="right">
-											<button class="button colored is-rounded is-danger"
+											<button class="button colored is-rounded is-danger" style="margin-right: 4px;"
 												th:onclick="hideUser([[${user.idEncoded}]])">
 												<i class="fa fa-thumbs-down"></i>
 											</button>
