--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -45,7 +45,7 @@
 								</label>
 							</div>
 							-->
-							<button class="button" th:text="#{submit}"></button>
+							<button class="button is-link" th:text="#{submit}"></button>
 						</form>
 					</div>
 
