Trim fontawesome size, making all pages load much faster

--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -26,9 +26,9 @@
 						<label class="label" th:text="#{search.max-distance}"></label>
 						<div class="slider-container"
 							style="padding-top: 8px; padding-bottom: 8px;">
-							<input class="slider has-output " step="1" min="1"
-								max="100" value="20" type="range" id="max-distance-slider">
-							<output for="max-distance-slider"></output>
+							<input class="slider has-output " step="1" min="1" max="100"
+								value="20" type="range" id="max-distance-slider">
+							<output for="max-distance-slider">20</output>
 							<div style="padding-left: 4px"></div>
 							<span th:text="#{km}"></span>
 						</div>
