--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -111,7 +111,8 @@
 									<input class="slider has-output" step="1" min="16" max="99"
 										th:value="${user.preferedMinAge}" type="range"
 										id="min-age-slider" style="margin-right: 8px;">
-									<output for="min-age-slider"  id="min-age-slider-output" th:text="${user.preferedMinAge}"></output>
+									<output for="min-age-slider" id="min-age-slider-output"
+										th:text="${user.preferedMinAge}"></output>
 								</div>
 							</div>
 							<div class="column">
@@ -120,7 +121,8 @@
 									<input class="slider has-output" step="1" min="16" max="99"
 										th:value="${user.preferedMaxAge}" type="range"
 										id="max-age-slider" style="margin-right: 8px;">
-									<output for="max-age-slider" id="max-age-slider-output" th:text="${user.preferedMaxAge}"></output>
+									<output for="max-age-slider" id="max-age-slider-output"
+										th:text="${user.preferedMaxAge}"></output>
 								</div>
 							</div>
 						</div>
@@ -236,7 +238,7 @@
 						<form th:action="@{/logout}" method="post">
 							<span class="navbar-item">
 								<button class="button is-info is-outlined" href="/logout"
-									style="width: 100%;" id="logout">
+									style="width: 100%;">
 									<span th:text="#{logout}"></span>
 								</button>
 							</span>
@@ -247,21 +249,17 @@
 			</div>
 		</div>
 	</div>
+	
+	<input type="hidden" th:value="${vapidPublicKey}" id="vapidPublicKey"></input>
 
 	<footer th:replace="fragments.html::navigation"></footer>
 	<footer th:replace="fragments.html::footer"></footer>
 
-	<script>
-		/*<![CDATA[*/
-		var applicationServerPublicKey = /*[[${vapidPublicKey}]]*/'default';
-		/*]]>*/
-	</script>
-
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
-	<script src="/js/lib/notification.js"></script>
 	<script src="/js/lib/bulma-slider.min.js"></script>
 	<script src="/js/lib/swiper.min.js"></script>
+	<script src="/js/lib/notification.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/tools/getText.js"></script>
 	<script src="/js/profile.js"></script>
