--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -96,7 +96,7 @@
 										th:text="#{profile.intention.date}"></option>
 									<option th:value="${intention.id}"
 										th:selected="${user.intention != null && user.intention.id == intention.id}"
-										th:if="${intention.text == 'sex'}"
+										th:if="${intention.text == 'sex' &&  isLegal}"
 										th:text="#{profile.intention.sex}"></option>
 								</th:block>
 							</select>
