--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -41,10 +41,10 @@
 						<label class="label" th:text="#{sort}"></label>
 						<div class="select">
 							<select id="sort">
+								<option value="4" th:text="#{default}"></option>
 								<option value="1" th:text="#{search.sort.filter.distance}"></option>
 								<option value="2" th:text="#{search.sort.filter.active}"></option>
 								<option value="3" th:text="#{search.sort.filter.interests}"></option>
-								<option value="4" th:text="#{search.sort.filter.donations}"></option>
 							</select>
 						</div>
 					</div>
