Maximum file sizes for uploading images and audio

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -253,6 +253,7 @@
 	</div>
 
 	<input type="hidden" th:value="${vapidPublicKey}" id="vapidPublicKey"></input>
+	<input type="hidden" th:value="${mediaMaxSize}" id="mediaMaxSize"></input>
 
 	<footer th:replace="fragments.html::navigation"></footer>
 	<footer th:replace="fragments.html::footer"></footer>
