Minified fontawesome library Fixed a UI bug in /register Updated sw.js to include large files, should increase speed in PWA greatly

--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -295,7 +295,7 @@ input[type=range].slider {
 	.footer {
 		background-color: #000000;
 	}
-	p a {
+	p a, label a {
 		color: #3273dc;
 	}
 	#logout:hover span {
