--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -26,7 +26,7 @@
 						th:onclick="viewProfile([[${notification.userFromDto.idEncoded}]])">
 						<div class="card-image">
 							<figure class="image">
-								<img th:src="${notification.userFromDto.profilePicture.data}"
+								<img th:src="${notification.userFromDto.profilePicture}"
 									class="profile-pic" style="margin: 0;">
 							</figure>
 						</div>
