--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -14,6 +14,7 @@
 @media screen and (max-width: 460px) {
 	.box {
 		padding: 0px;
+		box-shadow: initial;
 	}
 	.section {
 		padding: 0.5rem 1rem;
