--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -23,17 +23,17 @@
 						bc1q5yejhe5rv0m7j0euxml7klkd2ummw0gc3vx58p</span>
 				</div>
 
+				<div style="margin-bottom: 32px;"></div>
+
 				<a href="https://ko-fi.com/alovoa" target="_blank"
 					class="button is-info"
 					style="width: 100%; border-color: #dbdbdb; margin-bottom: 4px;"><i
 					class="fa fa-coins"></i><span th:text="#{kofi}"
 					style="padding-left: 4px;"></span></a>
-
-				<div style="margin-bottom: 32px;"></div>
-
 				<div class="notification is-success" th:text="#{donate.notice-1}"
-					style="margin-bottom: 4px;"></div>
-				<div class="notification is-success" th:text="#{donate.notice-2}"></div>
+					style="margin-bottom: 4px; font-size: 0.8em;"></div>
+				<div class="notification is-success" style="font-size: 0.8em;"
+					th:text="#{donate.notice-2}"></div>
 
 			</div>
 		</div>
