--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -195,7 +195,7 @@
 														</div>
 													</div>
 												</div>
-												<div class="media">
+												<div class="media" style="padding-bottom: 16px;">
 													<div class="full-width">
 														<div class="left" style="font-size: 1.2em">
 															<span th:text="#{last-active}"></span><span>: </span><span
